--- a/src/it/polito/tdp/borders/Borders.fxml
+++ b/src/it/polito/tdp/borders/Borders.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -10,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.borders.BordersController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.borders.BordersController">
    <top>
       <Label text="Country Borders" BorderPane.alignment="CENTER">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
          <BorderPane.margin>
             <Insets top="10.0" />
@@ -30,11 +31,24 @@
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin></Label>
-                  <TextField fx:id="txtAnno" alignment="TOP_LEFT" prefWidth="150.0" />
-                  <Button mnemonicParsing="false" onAction="#doCalcolaConfini" text="Calcola confini">
+                  <TextField fx:id="txtAnno" alignment="TOP_LEFT" prefWidth="150.0" promptText="1816 - 2006" />
+                  <Button fx:id="btnCalcolaConfini" mnemonicParsing="false" onAction="#doCalcolaConfini" text="Calcola confini">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin></Button>
+               </children>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox>
+               <children>
+                  <ComboBox fx:id="comboStati" disable="true" prefHeight="31.0" prefWidth="224.0" />
+                  <Button fx:id="btnTrovaVicini" disable="true" mnemonicParsing="false" onAction="#doTrovaVicini" text="Trova tutti i vicini">
+                     <HBox.margin>
+                        <Insets left="25.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
                <VBox.margin>
                   <Insets top="15.0" />
